argoCD/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yuito-site
  labels:
    app: yuito-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yuito-site
  template:
    metadata:
      labels:
        app: yuito-site
    spec:
      containers:
        - name: yuito-site
          image: registry.uniproject.jp/yuito-it/yuito-work:3.4.4
          volumeMounts:
            - name: spotify
              mountPath: /app/tmp
          ports:
            - containerPort: 3000
              name: default-port
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 20
            httpGet:
              path: /
              port: default-port
              httpHeaders:
                - name: X-k8s-Header
                  value: readiness
          livenessProbe:
            failureThreshold: 3
            timeoutSeconds: 5
            successThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 20
            httpGet:
              path: /
              port: default-port
              httpHeaders:
                - name: X-k8s-Header
                  value: readiness
      imagePullSecrets:
        - name: harbor-registry-secret
      volumes:
        - name: spotify
          persistentVolumeClaim:
            claimName: spotify
