argoCD/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yuito-site
  labels:
    name: yuito-site
  annotations:
    cert-manager.io/cluster-issuer: le-cf-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: www.yuito-it.jp
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: yuito-site
                port:
                  number: 80
  tls:
    - hosts:
        - yuito-it.jp
        - www.yuito-it.jp
      secretName: yuito-site-tls
